Fixing z-index

--- a/src/app/pages/games/pronostiques/pronostiques.component.scss
+++ b/src/app/pages/games/pronostiques/pronostiques.component.scss
@@ -2,7 +2,7 @@
 
 .pronostiqueHeader {
   top: 128px;
-  z-index: 100;
+  z-index: 50;
 }
 
 .filter {
